--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
 	<title>Testsite</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/assets/css/bootstrap-grid.min.css">
-	<link rel="stylesheet" href="/assets/css/bootstrap-reboot.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-grid.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-reboot.min.css">
 
-	<link rel="stylesheet" href="/assets/css/main.css">
+	<link rel="stylesheet" href="assets/css/main.css">
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!-- WARNING: Respond.js doesn't work if you view page via file://.. -->
 	<!-- [if it IE 9]>
@@ -35,7 +35,7 @@
 			</div>
 			<div class="col-lg-2">
 				<a href="#" class="logo" title="logo">
-						<div class="logo_constr"><img src="/assets/img/logo.png">
+						<div class="logo_constr"><img src="assets/img/logo.png">
 						</div>
 				</a>
 			</div>
@@ -45,7 +45,7 @@
 						<span>
 							sign in
 						</span>
-						<img src="/assets/img/home_icon.png" alt="sign in"></div>
+						<img src="assets/img/home_icon.png" alt="sign in"></div>
 
 </a>
 			</div>
@@ -76,7 +76,7 @@
 
 					</div>
 					<div class="col-lg-1 search text-right ">
-						<a href="#"><img src="/assets/img/search.png" alt="search"></a>
+						<a href="#"><img src="assets/img/search.png" alt="search"></a>
 					</div>
 
 			</div>
@@ -103,7 +103,7 @@
 		</div>
 		<div class="col-lg-12">
 				<div class="element d-flex justify-content-center">
-					<img src="/assets/img/element.png" alt="element">
+					<img src="assets/img/element.png" alt="element">
 				</div>
 		</div>
 	</div>
@@ -114,26 +114,26 @@
 	<div class="row">
 		<div class="col-xl-4">
 			<div class="content_img row_1">
-				<img class="content_articles" src="/assets/img/article1.jpg" alt="">
+				<img class="content_articles" src="assets/img/article1.jpg" alt="">
 				<div class="content_data">
 					<span >19.11.2017</span>
 					<h3>Extensions of the recreational area</h3>
 					<div class="content_readmore">
 							<a href=""><span>Read more</span></a>
-						<img src="/assets/img/arrow.png" alt="arrow">
+						<img src="assets/img/arrow.png" alt="arrow">
 					</div>
 				</div>
 			</div>
 		</div>
 		<div class="col-xl-6">
 			<div class="content_img row_1">
-				 <img class="content_articles" src="/assets/img/article2.jpg" alt="">
+				 <img class="content_articles" src="assets/img/article2.jpg" alt="">
 				<div class="content_data">
 					<span>19.11.2017</span>
 					<h3 class='long_img'>A new training system with a non-standard approach</h3>
 					<div class="content_readmore">
 							<a href=""><span>Read more</span></a>
-							<img src="/assets/img/arrow.png" alt="arrow">
+							<img src="assets/img/arrow.png" alt="arrow">
 					</div>
 				</div>
 			</div>
@@ -155,7 +155,7 @@
 
 				<div class="col-xl-6">
 						<div class="content_img row_2">
-								<img class="content_articles" src="/assets/img/article3.jpg" alt="">
+								<img class="content_articles" src="assets/img/article3.jpg" alt="">
 								<div class="content_data big_img">
 									<div class="vector_elem">
 											<svg width="2" height="70">
@@ -170,33 +170,33 @@
 									<p class="content_articles_more">The company we know as Tesla launched with the Roadster, a repurposed, eviscerated Lotus with its guts largely replaced with a freezer-sized battery pack and a repurposed electric motor...</p>
 									<div class="content_readmore">
 											<a href=""><span>Read more</span></a>
-										<img src="/assets/img/arrow.png" alt="arrow">
+										<img src="assets/img/arrow.png" alt="arrow">
 									</div>
 								</div>
 							</div>
 				</div>
 				<div class="col-xl-4">
 						<div class="content_img">
-								<img class="content_articles" src="/assets/img/article4.jpg" alt="">
+								<img class="content_articles" src="assets/img/article4.jpg" alt="">
 								<div class="content_data">
 									<span >16.11.2017</span>
 									<h3>The new hall of the library</h3>
 									<div class="content_readmore">
 											<a href=""><span>Read more</span></a>
-										<img src="/assets/img/arrow.png" alt="arrow">
+										<img src="assets/img/arrow.png" alt="arrow">
 									</div>
 								</div>
 						</div>
 
 								<div class="col-xl-4">
 										<div class="content_img last_article">
-												<img class="content_articles" src="/assets/img/article5.jpg" alt="">
+												<img class="content_articles" src="assets/img/article5.jpg" alt="">
 												<div class="content_data">
 													<span >01.11.2017</span>
 													<h3>Communication between students</h3>
 													<div class="content_readmore">
 															<a href=""><span>Read more</span></a>
-														<img src="/assets/img/arrow.png" alt="arrow">
+														<img src="assets/img/arrow.png" alt="arrow">
 													</div>
 												</div>
 										</div>
@@ -207,7 +207,7 @@
 
 	</div> <!--/row-->
 	<div class="row">
-		<div class="col-xl-12 ">
+		<div class="col-xl-10 ">
 				<div class="load_more d-flex justify-content-center">
 			<a href="#">load more</a></div>
 		</div>
@@ -218,7 +218,7 @@
 
 <div class="container">
 	<div class="row">
-	<div class="col-xl-12">
+	<div class="col-xl-10">
 
 		<div class="dots d-flex justify-content-center">
 <a href="">
@@ -251,7 +251,7 @@
 				<div class="subscribe_btn d-flex justify-content-center">
 				<a  href="">
 					<span>subscribe</span>
-					<img src="/assets/img/arrow.png" alt="">
+					<img src="assets/img/arrow.png" alt="">
 				</a>
 				</div>
 			</div>
@@ -263,7 +263,7 @@
 		<div class="row">
 			<div class="col-xl-12">
 				<div class="element_2 d-flex justify-content-center"> <img
-				src="/assets/img/element2.png" alt=""></div>
+				src="assets/img/element2.png" alt=""></div>
 			</div>
 		</div>
 <footer>
@@ -356,14 +356,14 @@
 			<div class="row">
 				<div class="col-xl-2 offset-5">
 						<a href="#" title="logo">
-								<div class="logo_constr"><img src="/assets/img/logo.png">
+								<div class="logo_constr"><img src="assets/img/logo.png">
 								</div>
 						</a>
 				</div>
 			</div>
 		</div>
 	</div><!--/last_block-->
-
+</div>
 </footer>
 
 
@@ -378,10 +378,10 @@
 <!-- jQuery for older IE -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <!-- site Scripts -->
-<script src="/assets/js/main.js"></script>
+<script src="assets/js/main.js"></script>
 <!-- Import Bootstrap -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="/assets/js/bootstrap.min.js"></script>
+<script src="assets/js/bootstrap.min.js"></script>
 </body>
 
 </html>
