--- a/dgm/index.html
+++ b/dgm/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Донецкгормаш</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="/dist/css/main.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
 
 	<header class="transparent">
-			<a class="logo" href="#"><img src="/assets/img/logo_dgm.png" alt="logo dongormash">
+			<a class="logo" href="#"><img src="assets/img/logo_dgm.png" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -20,7 +20,7 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-					<img src="/assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash">
+					<img src="assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash">
 				</div>
 				<nav class="transparent_nav">
 						<ul>
@@ -38,8 +38,8 @@
 		</div>
 	</header>
 	<div id="header_video">
-			<video poster="/assets/img/fire-1285224_960_720.jpg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="/assets/img/bg1.mp4" type="video/mp4">
+			<video poster="assets/img/fire-1285224_960_720.jpg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
+				<source src="assets/img/bg1.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
@@ -85,7 +85,7 @@
 </section>
 <section class="block-product undermining ">
 	<div class="block-product_picture">
-			<img src="/assets/img/konvejeer.jpg" alt="">
+			<img src="assets/img/konvejeer.jpg" alt="">
 	</div>
 	<div class="description_wrapper">
 		<div class="block-product_description">
@@ -120,19 +120,19 @@
 		</div>
 	</div>
 	<div class="block-product_picture">
-		<img src="/assets/img/ventel.jpg" alt="">
+		<img src="assets/img/ventel.jpg" alt="">
 	</div>
 </section>
 <section class="add_product">
 		<div class="block-product_picture">
-				<img src="/assets/img/konveeSkr.jpg" alt="">
+				<img src="assets/img/konveeSkr.jpg" alt="">
 		</div>
 </section>
 <footer class="footer">
 
 	<div class="scrol-btn">
 		<a href="#">
-			<img src="/assets/img/up-arrow.svg" alt="move to up">
+			<img src="assets/img/up-arrow.svg" alt="move to up">
 			<span>Наверх</span>
 		</a>
 	</div>
@@ -146,11 +146,11 @@
 				<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
 			</div>
 			<div class="social">
-					<a href="facebook"><img src="/assets/img/facebook-logo.svg" alt=""></a>
-					<a href="vk"><img src="/assets/img/vkontakte-logo.svg" alt=""></a>
-					<a href="linkedin"><img src="/assets/img/linkedin-logo.svg" alt=""></a>
-					<a href="instagram"><img src="/assets/img/instagram.svg" alt=""></a>
-					<a href="tweeter"><img src="/assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+					<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
+					<a href="vk"><img src="assets/img/vkontakte-logo.svg" alt=""></a>
+					<a href="linkedin"><img src="assets/img/linkedin-logo.svg" alt=""></a>
+					<a href="instagram"><img src="assets/img/instagram.svg" alt=""></a>
+					<a href="tweeter"><img src="assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 			</div>
 	</div>
 	<div class="footer_body">
@@ -194,9 +194,9 @@
 
 
 
-	<script src="/assets/js/jquery-3.3.1.min.js"></script>
+	<script src="assets/js/jquery-3.3.1.min.js"></script>
 
-	<!-- <script src="/assets/js/jquery.backgroundvideo.min.js"></script> -->
-	<script src="/assets/js/script.js"></script>
+	<!-- <script src="assets/js/jquery.backgroundvideo.min.js"></script> -->
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
