--- a/dgm/index.html
+++ b/dgm/index.html
@@ -38,8 +38,9 @@
 		</div>
 	</header>
 	<div id="header_video">
-			<video poster="assets/img/fire-1285224_960_720.jpg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="assets/img/bg1.mp4" type="video/mp4">
+		<div class="background"></div>
+			<video poster="assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
+				<source src="/assets/img/bgfinal.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
