--- a/dgm/index.html
+++ b/dgm/index.html
@@ -40,7 +40,7 @@
 	<div id="header_video">
 		<div class="background"></div>
 			<video poster="assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="assets/img/bgfinal.mp4" type="video/mp4">
+				<source src="assets/img/bgvideo.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
