--- a/index.html
+++ b/index.html
@@ -24,22 +24,21 @@
 <header>
 	<div class="container">
 		<div class="row">
-			<div class="col-lg-5">
+			<div class="col-sm-2 col-xs-2 ">
 				<div class="burger">
 					<svg width="20" height="9">
 						<path stroke="#ffffff" stroke-width="2"
 										d="M0,1 20,1 M0,8 15,8"/>
 					</svg>
 				</div>
-
 			</div>
-			<div class="col-lg-2">
+			<div class="col-sm-6 col-xs-6   text-center">
 				<a href="#" class="logo" title="logo">
 						<div class="logo_constr"><img src="assets/img/logo.png">
 						</div>
 				</a>
 			</div>
-			<div class="col-lg-5">
+			<div class="col-sm-4 col-xs-6 ">
 				<a href="#" title="sign in">
 					<div class="sign_in">
 						<span>
@@ -47,7 +46,7 @@
 						</span>
 						<img src="assets/img/home_icon.png" alt="sign in"></div>
 
-</a>
+				</a>
 			</div>
 		</div>
 	</div>
@@ -56,7 +55,7 @@
 <nav class="d-flex align-items-center">
 	<div class="container">
 			<div class="row justify-content-between">
-					<div class="col-lg-5 d-flex align-items-center">
+					<div class="col-lg-6 d-flex align-items-center">
 						<ul id="menu">
 								<li><a href="#">main</a></li>
 								<li><a href="#">about</a></li>
