--- a/dgm/index.html
+++ b/dgm/index.html
@@ -86,7 +86,7 @@
 </section>
 <section class="block-product undermining ">
 	<div class="block-product_picture">
-			<img src="assets/img/konvejeer.jpg" alt="">
+			<img src="/dgm/assets/img/konvejeer.jpg" alt="">
 	</div>
 	<div class="description_wrapper">
 		<div class="block-product_description">
