--- a/dgm/index.html
+++ b/dgm/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<header class="transparent">
-			<a class="logo" href="#"><img src="assets/img/logo_dgm.png" alt="logo dongormash">
+			<a class="logo" href="#"><img src="/dgm/assets/img/logo_dgm.png" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -39,8 +39,8 @@
 	</header>
 	<div id="header_video">
 		<div class="background"></div>
-			<video poster="assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="assets/img/bgvideo.mp4" type="video/mp4">
+			<video poster="/dgm/assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
+				<source src="/dgm/assets/img/bgvideo.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
@@ -121,19 +121,19 @@
 		</div>
 	</div>
 	<div class="block-product_picture">
-		<img src="assets/img/ventel.jpg" alt="">
+		<img src="/dgm/assets/img/ventel.jpg" alt="">
 	</div>
 </section>
 <section class="add_product">
 		<div class="block-product_picture">
-				<img src="assets/img/konveeSkr.jpg" alt="">
+				<img src="/dgm/assets/img/konveeSkr.jpg" alt="">
 		</div>
 </section>
 <footer class="footer">
 
 	<div class="scrol-btn">
 		<a href="#">
-			<img src="assets/img/up-arrow.svg" alt="move to up">
+			<img src="/dgm/assets/img/up-arrow.svg" alt="move to up">
 			<span>Наверх</span>
 		</a>
 	</div>
@@ -147,11 +147,11 @@
 				<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
 			</div>
 			<div class="social">
-					<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
-					<a href="vk"><img src="assets/img/vkontakte-logo.svg" alt=""></a>
-					<a href="linkedin"><img src="assets/img/linkedin-logo.svg" alt=""></a>
-					<a href="instagram"><img src="assets/img/instagram.svg" alt=""></a>
-					<a href="tweeter"><img src="assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+					<a href="facebook"><img src="/dgm/assets/img/facebook-logo.svg" alt=""></a>
+					<a href="vk"><img src="/dgm/assets/img/vkontakte-logo.svg" alt=""></a>
+					<a href="linkedin"><img src="/dgm/assets/img/linkedin-logo.svg" alt=""></a>
+					<a href="instagram"><img src="/dgm/assets/img/instagram.svg" alt=""></a>
+					<a href="tweeter"><img src="/dgm/assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 			</div>
 	</div>
 	<div class="footer_body">
@@ -195,9 +195,9 @@
 
 
 
-	<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<script src="/dgm/assets/js/jquery-3.3.1.min.js"></script>
 
 	<!-- <script src="assets/js/jquery.backgroundvideo.min.js"></script> -->
-	<script src="assets/js/script.js"></script>
+	<script src="/dgm/assets/js/script.js"></script>
 </body>
 </html>
