--- a/index.html
+++ b/index.html
@@ -83,13 +83,13 @@
 </nav>
 <div class="container">
 	<div class="row">
-		<div class="col-lg-12">
+		<div class="col-md-12">
 			<div class="tittle d-flex justify-content-center">
 				<h1>events and news</h1>
 			</div>
 		</div>
 
-		<div class="col-lg-12">
+		<div class="col-sm-12">
 			<div class="triger d-flex justify-content-center">
 					<a class="triger_button" href="#">subscribe to news</a>
 					<span>Follow us:</span>
@@ -238,20 +238,22 @@
 <div class="container">
 	<div class="subscribe_news">
 		<div class="row">
-			<div class="col-xl-4 offset-1">
+			<div class="col-md-5 ">
 				<span class="subscribe_to_news">subscribe to news</span>
 			</div>
-			<div class="col-xl-5 offset-2">
-				<form action="submit" value='write your e-mail'>
-				<div class="write_email">
-				<a  href="">write your e-mail</a>
-			</div>
-		</form>
-				<div class="subscribe_btn d-flex justify-content-center">
-				<a  href="">
-					<span>subscribe</span>
-					<img src="assets/img/arrow.png" alt="">
-				</a>
+			<div class="col-md-7 ">
+				<div class="subscribe_wrapper">
+					<form action="submit" value='write your e-mail'>
+						<div class="write_email">
+							<a  href="">write your e-mail</a>
+						</div>
+					</form>
+					<div class="subscribe_btn d-flex justify-content-center">
+						<a  href="">
+							<span>subscribe</span>
+							<img src="assets/img/arrow.png" alt="">
+						</a>
+					</div>
 				</div>
 			</div>
 		</div>
@@ -259,17 +261,17 @@
 </div>
 
 
-		<div class="row">
-			<div class="col-xl-12">
-				<div class="element_2 d-flex justify-content-center"> <img
-				src="assets/img/element2.png" alt=""></div>
-			</div>
-		</div>
+<div class="row">
+	<div class="col-xl-12">
+		<div class="element_2 d-flex justify-content-center"> <img
+		src="assets/img/element2.png" alt=""></div>
+	</div>
+</div>
 <footer>
 <div class="end_block">
 	<div class="container">
 		<div class="row">
-			<div class="col-xl-2">
+			<div class="col-lg-2 col-md-3">
 				<div class="footer_list">
 					<ul>
 						<li>Information:</li>
@@ -281,7 +283,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="col-xl-2">
+			<div class="col-lg-2 col-md-3">
 					<div class="footer_list">
 						<ul>
 							<li>education:</li>
@@ -294,8 +296,8 @@
 					</div>
 
 			</div>
-			<div class="col-xl-2">
-					<div class="footer_list">
+			<div class=" col-md-3 col-lg-2">
+					<div class="footer_list entrant">
 							<ul>
 								<li>Entrant:</li>
 								<li><a href="">Introduction </a></li>
@@ -307,7 +309,7 @@
 					</div>
 
 			</div>
-			<div class="col-xl-2">
+			<div class="col-md-3 col-lg-2">
 					<div class="footer_list">
 							<ul>
 								<li>Leisure:</li>
@@ -320,7 +322,7 @@
 					</div>
 
 			</div>
-			<div class="col-xl-4">
+			<div class="col-lg-4 col-md-12">
 					<div class="footer_list">
 							<ul>
 								<li>social:</li>
