--- a/dgm/index.html
+++ b/dgm/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Донецкгормаш</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="dist/css/main.css">
+	<link rel="stylesheet" href="/dist/css/main.css">
 </head>
 <body>
-
+<div id="leftborder"></div>
 	<header class="transparent">
-			<a class="logo" href="#"><img src="/dgm/assets/img/logo_dgm.png" alt="logo dongormash">
+			<a class="logo" href="/index.html"><img src="../assets/img/dgm-svg-full.svg" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -20,13 +20,13 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-					<img src="assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash">
+					<a href="/index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
 				</div>
 				<nav class="transparent_nav">
 						<ul>
-							<li><a href="">О компании</a>
+							<li><a href="/about.html">О компании</a>
 							<li><a href="">Карьера</a>
-							<li><a href="">Продукция</a>
+							<li><a href="/product.html">Продукция</a>
 							<li><a href="">Поставщикам</a>
 							<li><a href="">Контакты</a>
 						</ul>
@@ -37,10 +37,11 @@
 			</div>
 		</div>
 	</header>
+<!--////////////////////////////////////////////////////////-->
 	<div id="header_video">
-		<div class="background"></div>
-			<video poster="/dgm/assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="/dgm/assets/img/bgvideo.mp4" type="video/mp4">
+
+			<video poster="../assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
+				<source src="../assets/img/bgvideo.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
@@ -86,7 +87,7 @@
 </section>
 <section class="block-product undermining ">
 	<div class="block-product_picture">
-			<img src="/dgm/assets/img/konvejeer.jpg" alt="">
+			<img src="../assets/img/konvejeer.jpg" alt="">
 	</div>
 	<div class="description_wrapper">
 		<div class="block-product_description">
@@ -98,7 +99,7 @@
 				</a>
 			<a href="#">
 				<div class="description_side">
-						<span class="card_body">Ленточные конвейеры<br> (горизонтальные и наклонные)<br> электровозы <br> вагонетки</span>
+						<span class="card_body">Ленточные конвейеры<br> (горизонтальные и наклонные)<br> Машина погрузочно-транспортная шахтная (ПД-8В) <br> вагонетки</span>
 				</div>
 			</a>
 		</div>
@@ -121,22 +122,22 @@
 		</div>
 	</div>
 	<div class="block-product_picture">
-		<img src="/dgm/assets/img/ventel.jpg" alt="">
+		<img src="../assets/img/ventel.jpg" alt="">
 	</div>
 </section>
 <section class="add_product">
 		<div class="block-product_picture">
-				<img src="/dgm/assets/img/konveeSkr.jpg" alt="">
+				<img src="../assets/img/konveeSkr.jpg" alt="">
 		</div>
 </section>
+<!--//////////////////////////////////////////////////////////////-->
+
 <footer class="footer">
 
 	<div class="scrol-btn">
-		<a href="#">
-			<img src="/dgm/assets/img/up-arrow.svg" alt="move to up">
+				<img src="../assets/img/up-arrow.svg" alt="move to up">
 			<span>Наверх</span>
-		</a>
-	</div>
+		</div>
 	<div class="footer_wrapper">
 	<div class="footer_head">
 			<div class="contact-location adress">
@@ -147,32 +148,32 @@
 				<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
 			</div>
 			<div class="social">
-					<a href="facebook"><img src="/dgm/assets/img/facebook-logo.svg" alt=""></a>
-					<a href="vk"><img src="/dgm/assets/img/vkontakte-logo.svg" alt=""></a>
-					<a href="linkedin"><img src="/dgm/assets/img/linkedin-logo.svg" alt=""></a>
-					<a href="instagram"><img src="/dgm/assets/img/instagram.svg" alt=""></a>
-					<a href="tweeter"><img src="/dgm/assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+					<a href="facebook"><img src="../assets/img/facebook-logo.svg" alt=""></a>
+					<a href="vk"><img src="../assets/img/vkontakte-logo.svg" alt=""></a>
+					<a href="linkedin"><img src="../assets/img/linkedin-logo.svg" alt=""></a>
+					<a href="instagram"><img src="../assets/img/instagram.svg" alt=""></a>
+					<a href="tweeter"><img src="../assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 			</div>
 	</div>
 	<div class="footer_body">
 
 			<div class="footer-contact sales ">
-				<h3 class="contact-location_heading" >Отдел продаж</h3>
+				<h3 class="contact-location_heading" >Приемная Директора</h3>
 				<p>+38(062)XXX-XX-XX</p>
 				<p>example@mail.ru</p>
 			</div>
 			<div class="footer-contact marketing">
-					<h3 class="contact-location_heading"  >Отдел маркетинга</h3>
+					<h3 class="contact-location_heading"  >Коммерческое управление</h3>
 					<p>+38(062)XXX-XX-XX</p>
 					<p>example@mail.ru</p>
 			</div>
 			<div class="footer-contact sales">
-					<h3 class="contact-location_heading" >Отдел сервиса</h3>
+					<h3 class="contact-location_heading" >Отдел снабжения</h3>
 					<p>+38(062)XXX-XX-XX</p>
 					<p>example@mail.ru</p>
 			</div>
 			<div class="footer-contact sales">
-					<h3 class="contact-location_heading" >Отдел сервиса</h3>
+					<h3 class="contact-location_heading" >Отдел кадров</h3>
 					<p>+38(062)XXX-XX-XX</p>
 					<p>example@mail.ru</p>
 			</div>
@@ -185,19 +186,8 @@
 
 </div>
 </footer>
-
-
-
-
-
-
-
-
-
-
-	<script src="/dgm/assets/js/jquery-3.3.1.min.js"></script>
-
-	<!-- <script src="assets/js/jquery.backgroundvideo.min.js"></script> -->
-	<script src="/dgm/assets/js/script.js"></script>
+	<script src="../assets/js/jquery-3.3.1.min.js"></script>
+	<script src="../assets/js/script.js"></script>
 </body>
 </html>
+<!--////////////////////////////////////////////////////////-->
