--- a/dgm/index.html
+++ b/dgm/index.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Донецкгормаш</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="/dist/css/main.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
 <div id="leftborder"></div>
 	<header class="transparent">
-			<a class="logo" href="/index.html"><img src="../assets/img/dgm-svg-full.svg" alt="logo dongormash">
+			<a class="logo" href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -20,13 +20,13 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-					<a href="/index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
+					<a href="index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
 				</div>
 				<nav class="transparent_nav">
 						<ul>
-							<li><a href="/about.html">О компании</a>
+							<li><a href="about.html">О компании</a>
 							<li><a href="">Карьера</a>
-							<li><a href="/product.html">Продукция</a>
+							<li><a href="product.html">Продукция</a>
 							<li><a href="">Поставщикам</a>
 							<li><a href="">Контакты</a>
 						</ul>
