--- a/dgm/index.html
+++ b/dgm/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-					<a href="index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
+					<a href="index.html"><img src="assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
 				</div>
 				<nav class="transparent_nav">
 						<ul>
@@ -40,8 +40,8 @@
 <!--////////////////////////////////////////////////////////-->
 	<div id="header_video">
 
-			<video poster="../assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
-				<source src="../assets/img/bgvideo.mp4" type="video/mp4">
+			<video poster="assets/img/backdetal.jpeg" id="bgvid" playsinline="" autoplay="" muted="" loop="">
+				<source src="assets/img/bgvideo.mp4" type="video/mp4">
 		</video>
 		<h1 class="header_text"> <span>ГП &laquoДонецкгормаш&raquo</span><br>
 			История Приемственность Развитие Инновации
@@ -87,7 +87,7 @@
 </section>
 <section class="block-product undermining ">
 	<div class="block-product_picture">
-			<img src="../assets/img/konvejeer.jpg" alt="">
+			<img src="assets/img/konvejeer.jpg" alt="">
 	</div>
 	<div class="description_wrapper">
 		<div class="block-product_description">
@@ -122,12 +122,12 @@
 		</div>
 	</div>
 	<div class="block-product_picture">
-		<img src="../assets/img/ventel.jpg" alt="">
+		<img src="assets/img/ventel.jpg" alt="">
 	</div>
 </section>
 <section class="add_product">
 		<div class="block-product_picture">
-				<img src="../assets/img/konveeSkr.jpg" alt="">
+				<img src="assets/img/konveeSkr.jpg" alt="">
 		</div>
 </section>
 <!--//////////////////////////////////////////////////////////////-->
@@ -135,7 +135,7 @@
 <footer class="footer">
 
 	<div class="scrol-btn">
-				<img src="../assets/img/up-arrow.svg" alt="move to up">
+				<img src="assets/img/up-arrow.svg" alt="move to up">
 			<span>Наверх</span>
 		</div>
 	<div class="footer_wrapper">
@@ -148,11 +148,11 @@
 				<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
 			</div>
 			<div class="social">
-					<a href="facebook"><img src="../assets/img/facebook-logo.svg" alt=""></a>
-					<a href="vk"><img src="../assets/img/vkontakte-logo.svg" alt=""></a>
-					<a href="linkedin"><img src="../assets/img/linkedin-logo.svg" alt=""></a>
-					<a href="instagram"><img src="../assets/img/instagram.svg" alt=""></a>
-					<a href="tweeter"><img src="../assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+					<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
+					<a href="vk"><img src="assets/img/vkontakte-logo.svg" alt=""></a>
+					<a href="linkedin"><img src="assets/img/linkedin-logo.svg" alt=""></a>
+					<a href="instagram"><img src="assets/img/instagram.svg" alt=""></a>
+					<a href="tweeter"><img src="assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 			</div>
 	</div>
 	<div class="footer_body">
@@ -186,8 +186,8 @@
 
 </div>
 </footer>
-	<script src="../assets/js/jquery-3.3.1.min.js"></script>
-	<script src="../assets/js/script.js"></script>
+	<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<script src="assets/js/script.js"></script>
 </body>
 </html>
 <!--////////////////////////////////////////////////////////-->
