--- a/dgm/product.html
+++ b/dgm/product.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Наши продукты</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="/dist/css/main.css">
+	<link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
 <div id="leftborder"></div>
 	<header class="transparent">
-			<a class="logo" href="/index.html"><img src="../assets/img/dgm-svg-full.svg" alt="logo dongormash">
+			<a class="logo" href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -20,13 +20,13 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-						<a href="/index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
+						<a href="index.html"><img src="assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
 				</div>
 				<nav class="transparent_nav">
 						<ul>
-							<li><a href="/about.html">О компании</a>
+							<li><a href="about.html">О компании</a>
 							<li><a href="">Карьера</a>
-							<li><a href="/product.html">Продукция</a>
+							<li><a href="product.html">Продукция</a>
 							<li><a href="">Поставщикам</a>
 							<li><a href="">Контакты</a>
 						</ul>
@@ -50,7 +50,7 @@
 <footer class="footer">
 
 		<div class="scrol-btn">
-					<img src="../assets/img/up-arrow.svg" alt="move to up">
+					<img src="assets/img/up-arrow.svg" alt="move to up">
 				<span>Наверх</span>
 			</div>
 		<div class="footer_wrapper">
@@ -63,11 +63,11 @@
 					<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
 				</div>
 				<div class="social">
-						<a href="facebook"><img src="../assets/img/facebook-logo.svg" alt=""></a>
-						<a href="vk"><img src="../assets/img/vkontakte-logo.svg" alt=""></a>
-						<a href="linkedin"><img src="../assets/img/linkedin-logo.svg" alt=""></a>
-						<a href="instagram"><img src="../assets/img/instagram.svg" alt=""></a>
-						<a href="tweeter"><img src="../assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+						<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
+						<a href="vk"><img src="assets/img/vkontakte-logo.svg" alt=""></a>
+						<a href="linkedin"><img src="assets/img/linkedin-logo.svg" alt=""></a>
+						<a href="instagram"><img src="assets/img/instagram.svg" alt=""></a>
+						<a href="tweeter"><img src="assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 				</div>
 		</div>
 		<div class="footer_body">
@@ -101,7 +101,7 @@
 
 	</div>
 	</footer>
-		<script src="../assets/js/jquery-3.3.1.min.js"></script>
-		<script src="../assets/js/script.js"></script>
+		<script src="assets/js/jquery-3.3.1.min.js"></script>
+		<script src="assets/js/script.js"></script>
 	</body>
 	</html>
