--- a/dgm/about/managers.html
+++ b/dgm/about/managers.html
@@ -6,12 +6,12 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>О нас</title>
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-	<link rel="stylesheet" href="dist/css/main.css">
+	<link rel="stylesheet" href="../dist/css/main.css">
 </head>
 <body>
 <div id="leftborder"></div>
 	<header class="transparent">
-			<a class="logo" href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
+			<a class="logo" href="../index.html"><img src="../assets/img/dgm-svg-full.svg" alt="logo dongormash">
 			</a>
 		<div class="container">
 			<div id="MenuIcon">
@@ -20,15 +20,15 @@
 			</div>
 			<div id="MainMenu">
 				<div id="logo">
-						<a href="index.html"><img src="assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
+						<a href="../index.html"><img src="../assets/img/dgm-svg-full.svg" class="logo_svg"  alt="logo dongormash"></a>
 				</div>
 				<nav class="transparent_nav">
 						<ul>
-							<li><a href="about.html">О компании</a>
-							<li><a href="">Карьера</a>
-							<li><a href="product.html">Продукция</a>
-							<li><a href="">Поставщикам</a>
-							<li><a href="">Контакты</a>
+							<li><a href="index.html">О компании</a>
+							<li><a href="../personnel/index.html">Карьера</a>
+							<li><a href="../product/index.html">Продукция</a>
+							<li><a href="../shipper.html">Поставщикам</a>
+							<li><a href="../contact/index.html">Контакты</a>
 						</ul>
 				</nav>
 				<div id="close">
@@ -43,9 +43,12 @@
 			<nav class="sidebar_nav">
 				<div class="sidebar_nav_items">
 					<a href="index.html">Миссия и ценности</a>
+					<br>
 					<a href="history.html">История основания</a>
+					<br>
+					<a href="today.html">История сейчас</a>
+					<br>
 					<a href="managers.html">Руководство</a>
-					<a href=""></a>
 				</div>
 			</nav>
 		</div>
@@ -65,7 +68,7 @@
 <footer class="footer">
 
 		<div class="scrol-btn">
-					<img src="assets/img/up-arrow.svg" alt="move to up">
+					<img src="../assets/img/up-arrow.svg" alt="move to up">
 				<span>Наверх</span>
 			</div>
 		<div class="footer_wrapper">
@@ -75,14 +78,14 @@
 					<p>83005<br> г.Донецк<br> ул.Ивана Ткаченко, 189</p>
 				</div>
 				<div class="contact-location mail">
-					<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
+					<a href="../contact/contactform.html"><span class="contact-form">Свяжитесь с нами</span></a>
 				</div>
 				<div class="social">
-						<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
-						<a href="vk"><img src="assets/img/vkontakte-logo.svg" alt=""></a>
-						<a href="linkedin"><img src="assets/img/linkedin-logo.svg" alt=""></a>
-						<a href="instagram"><img src="assets/img/instagram.svg" alt=""></a>
-						<a href="tweeter"><img src="assets/img/twitter-logo-on-black-background.svg" alt=""></a>
+						<a href="facebook"><img src="../assets/img/facebook-logo.svg" alt=""></a>
+						<a href="vk"><img src="../assets/img/vkontakte-logo.svg" alt=""></a>
+						<a href="linkedin"><img src="../assets/img/linkedin-logo.svg" alt=""></a>
+						<a href="instagram"><img src="../assets/img/instagram.svg" alt=""></a>
+						<a href="tweeter"><img src="../assets/img/twitter-logo-on-black-background.svg" alt=""></a>
 				</div>
 		</div>
 		<div class="footer_body">
@@ -116,7 +119,7 @@
 
 	</div>
 	</footer>
-		<script src="assets/js/jquery-3.3.1.min.js"></script>
-		<script src="assets/js/script.js"></script>
+		<script src="../assets/js/jquery-3.3.1.min.js"></script>
+		<script src="../assets/js/script.js"></script>
 	</body>
 	</html>
