--- a/dgm/index.html
+++ b/dgm/index.html
@@ -9,6 +9,37 @@
 	<link rel="stylesheet" href="dist/css/main.css">
 </head>
 <body>
+<div id="page-preloader" class="preloader">
+	<div class="loader">
+		<span id="load_perc">0 %</span>
+			<svg version="1.1" id="svg1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+			width="300px" height="300px" viewBox="0 0 213 141" style="enable-background:new 0 0 213 141;" xml:space="preserve">
+	 <style type="text/css">
+		 .st3{fill:none;stroke:#ffffff;stroke-width:1;stroke-miterlimit:10;}
+	 </style>
+	 <g id="figure">
+		<path class="st3" id="check7" fill="none" stroke="white" stroke-dasharray="586" stroke-dashoffset="0"   d="M1.8 120.9,106.8 3,211.8 120.9,125.8 120.9,125.8 100,106.8 120.9,87.8 100,87.8 120.9 Z">
+				<animate id="p2" attributeName="stroke-dashoffset" begin="0s" values="586; 0" dur="2.5s" repeatCount="indefinite" keyTimes="0; 1" fill="freeze" calcMode="spline" keySplines=".18 .73 .87 .24"></animate>
+	 </path>
+	 <path class="st3" id="check8" fill="none" stroke="white" stroke-dasharray="475" stroke-dashoffset="0"   d="M34.8 106,106.8 25.8,178.7 106,138.9 106,138.9 63.3,106.8 97.6, 74.8 63.3, 74.8 106 Z">
+			<animate id="p3" attributeName="stroke-dashoffset" begin="0s" values="475; 0" dur="2.5s" repeatCount="indefinite" keyTimes="0; 1" fill="freeze" calcMode="spline" keySplines=".18 .73 .87 .24">
+	 </path>
+	 <path class="st3" id="check6" fill="none" stroke="white" stroke-dasharray="162" stroke-dashoffset="0" d="M106.7 58, 124.6 76,124.8 47,121.6 43.8,91.8 43.8,89 46.9,89 76,91.8 78.8,106.7 78.8 Z">
+			<animate id="p4" attributeName="stroke-dashoffset" begin="0s" values="162; 0" dur="2.5s" repeatCount="indefinite" keyTimes="0;1" fill="freeze" calcMode="spline" keySplines=".18 .73 .87 .24">
+	 </path>
+	 </g>
+	 </svg>
+	 <div id="load">
+			<div>G</div>
+			<div>N</div>
+			<div>I</div>
+			<div>D</div>
+			<div>A</div>
+			<div>O</div>
+			<div>L</div>
+		</div>
+	</div>
+</div>
 <div id="leftborder"></div>
 	<header class="transparent">
 			<a class="logo" href="index.html"><img src="assets/img/dgm-svg-full.svg" alt="logo dongormash">
@@ -24,11 +55,11 @@
 				</div>
 				<nav class="transparent_nav">
 						<ul>
-							<li><a href="about.html">О компании</a>
-							<li><a href="">Карьера</a>
-							<li><a href="product.html">Продукция</a>
-							<li><a href="">Поставщикам</a>
-							<li><a href="">Контакты</a>
+							<li><a href="about/index.html">О компании</a>
+							<li><a href="personnel/index.html">Карьера</a>
+							<li><a href="product/index.html">Продукция</a>
+							<li><a href="shipper.html">Поставщикам</a>
+							<li><a href="contact/index.html">Контакты</a>
 						</ul>
 				</nav>
 				<div id="close">
@@ -85,6 +116,26 @@
 		</div>
 	</div>
 </section>
+<section class="block-product adobemining ">
+		<div class="description_wrapper">
+			<div class="block-product_description">
+				<a href="#">
+					<div class="description_title">
+						<h3 class="heading_h3 card_title">Роторные экскаваторы</h3>
+						<p class="heading_h4 card_subtitle">НУЖНО ВСТАВИТЬ ТЕКСТ &laquoДонецкгормаш&raquo ЗАМЕНИТЬ ПОД РОТОРНОЕ ОБОРУДОВАНИЕ <b>удовлетворить требования каждого Клиента.</b></p>
+					</div>
+				</a>
+				<a href="">
+					<div class="description_side">
+						 <span class="card_body">ДРУГОЙ ПЕРЕЧЕНЬ<br>оборудование шахтного подъема<br> (скипы, копровые шкивы, подвесные устройства, клети, парашюты и др.)<br> подъемные машины<br>лебедки</span>
+					</div>
+				</a>
+			</div>
+		</div>
+		<div class="block-product_picture">
+			<img src="assets/img/rotor1024x658.jpg" alt="">
+		</div>
+	</section>
 <section class="block-product undermining ">
 	<div class="block-product_picture">
 			<img src="assets/img/konvejeer.jpg" alt="">
@@ -145,7 +196,7 @@
 				<p>83005<br> г.Донецк<br> ул.Ивана Ткаченко, 189</p>
 			</div>
 			<div class="contact-location mail">
-				<a href=""><span class="contact-form">Свяжитесь с нами</span></a>
+				<a href="contact/contactform.html"><span class="contact-form">Свяжитесь с нами</span></a>
 			</div>
 			<div class="social">
 					<a href="facebook"><img src="assets/img/facebook-logo.svg" alt=""></a>
@@ -188,6 +239,7 @@
 </footer>
 	<script src="assets/js/jquery-3.3.1.min.js"></script>
 	<script src="assets/js/script.js"></script>
+	<script src="assets/js/preloader.js"></script>
 </body>
 </html>
 <!--////////////////////////////////////////////////////////-->
