--- a/gvardiya/index.html
+++ b/gvardiya/index.html
@@ -73,7 +73,7 @@ var cforms2_ajax = {"url":"http:\/\/u-constr.ru\/wp-admin\/admin-ajax.php","nonc
 <body >
 
 
-<!-- <div class="preloader-inner" id="preloader">
+<div class="preloader-inner" id="preloader">
     <div class="wrap">
         <div class="preloader">
             <div class="one"></div>
@@ -82,7 +82,7 @@ var cforms2_ajax = {"url":"http:\/\/u-constr.ru\/wp-admin\/admin-ajax.php","nonc
             <div class="double_bounce2"></div>
         </div>
     </div>
-</div> -->
+</div>
 <div class="top-block">
     <div class="container">
                     <ul class="topnav" >
