--- a/slipper/index.html
+++ b/slipper/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
-  <!-- <div class="page_preloader preloader" data-widget="preloader" style="">
+  <div class="page_preloader preloader" data-widget="preloader" style="">
     <div class="preloader_wrapper">
       <div class="preloader_logo">
         <img src="img/logo.svg" alt="" class="preloader-logo">
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-  </div> -->
+  </div>
   <!-- FIXED RIGHT NAVIGATION -->
   <div class="right-fixed-navigation list-group" id="right-nav" data-widget="scrollspy">
     <a class="list-group-item list-group-item-action scrollspy_item" href="#first-section"><span></span></a>
