--- a/slipper/index.html
+++ b/slipper/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="scss/style.css">
 </head>
 <body>
-  <div class="page_preloader preloader" data-widget="preloader" style="">
+  <!-- <div class="page_preloader preloader" data-widget="preloader" style="">
     <div class="preloader_wrapper">
       <div class="preloader_logo">
         <img src="img/logo.svg" alt="" class="preloader-logo">
@@ -30,7 +30,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   <!-- FIXED RIGHT NAVIGATION -->
   <div class="right-fixed-navigation list-group" id="right-nav" data-widget="scrollspy">
     <a class="list-group-item list-group-item-action scrollspy_item" href="#first-section"><span></span></a>
@@ -516,7 +516,7 @@
         <div class="text-block">
           <h1 class="blue">Качество</h1>
           <h6 class="white">1 год гарантии</h6>
-          <p class="white">Твоя уверенность в надежности — Это наша упорная работа.<br> Долговечность Slipper <span class="red">X ONE</span> сопровождается<br> гарантией в 1 год от производителя.</p>
+          <p class="white"><span class="br-block">Твоя уверенность </span><span class="br-block">в надежности — Это наша упорная работа.<br></span><span class="br-block"> Долговечность Slipper <span class="red">X ONE</span></span> <span class="br-block">сопровождается<br> гарантией в 1 год</span><span class="br-block"> от производителя.</span></p>
         </div>
       </div>
       <footer>
