--- a/dgm/index.html
+++ b/dgm/index.html
@@ -8,6 +8,7 @@
 	<meta name="msaplication-navbutton-color" content="#b70021">
 	<meta name="apple-mobile-web-app-status-bar-style" content="#b70021">
 	<title>Донецкгормаш</title>
+	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 	<link rel="stylesheet" href="dist/css/main.css">
 </head>
